test/errors/assert/foreach.yasl

for x <- [1, 2, 3] {
    assert false
    echo x
}
